Fixed dark mode colors and hover states

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -20,6 +20,13 @@
         --accent-foreground: 24 9.8% 10%;
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 60 9.1% 97.8%;
+        --border: 20 5.9% 90%;
+        --input: 20 5.9% 90%;
+        --ring: 24.6 95% 53.1%;
+        --radius: 0.5rem;
+        --base-padding: 1.75rem;
+
+        /* Related to user progress */
         --primary-active: 20, 88%, 90%, 1;
         --primary-complete: 140, 54%, 89%, 1;
         --primary-disabled: 0, 0%, 91%, 1;
@@ -29,11 +36,6 @@
         --complete-border: 140, 63%, 36%, 0.1;
         --active-border: 20, 87%, 40%, 0.2;
         --disabled-border: 0, 0%, 0%, 0.1;
-        --border: 20 5.9% 90%;
-        --input: 20 5.9% 90%;
-        --ring: 24.6 95% 53.1%;
-        --radius: 0.5rem;
-        --base-padding: 1.75rem;
     }
 
     .dark {
@@ -57,6 +59,17 @@
         --input: 12 6.5% 15.1%;
         --ring: 20.5 90.2% 48.2%;
         --base-padding: 1.75rem;
+
+        /* Related to user progress */
+        --primary-active: 20, 89%, 50%, 1;
+        --primary-complete: 140, 64%, 45%, 1;
+        --primary-disabled: 0, 0%, 100%, 0.12;
+        --primary-active-foreground: 20, 88%, 90%, 1;
+        --primary-complete-foreground: 140, 54%, 89%, 1;
+        --primary-disabled-foreground: 0, 0%, 100%, 0.3;
+        --complete-border: 140, 63%, 36%, 0.1;
+        --active-border: 20, 87%, 40%, 0.2;
+        --disabled-border: 0, 0%, 0%, 0.1;
     }
 }
 
@@ -125,6 +138,6 @@
 .fill-disabled-svg {
     svg,
     path {
-        @apply fill-disabled-foreground transition-all duration-300 ease-in-out group-hover:fill-disabled;
+        @apply fill-disabled-foreground transition-all duration-300 ease-in-out;
     }
 }
